# cerebral-mobile

./: .cursorrules  .eslintrc.json  .gitignore  .nycrc.json  .phase-1-5-detection.json  .pre-commit-config.yaml  .releaserc.js  .trigger  BASE_IMAGES_DOCUMENTATION.md  CI_CD_COMPLETE_GUIDE.md  CI_CD_MONITORING_GUIDE.md  CI_CD_README.md  CODEOWNERS  CODE_QUALITY_GUARDRAILS.md  CONTRIBUTING.md  GITHUB_WEBHOOK_ORG_SETUP.md  IMPLEMENTATION_CHECKLIST.md  MOBILE_IMPLEMENTATION_PLAN.md  README.md  README_DOCUMENTATION.md  README_IMPLEMENTATION.md  SETUP_COMPLETE.md  START_HERE.md  SYSTEM_WIRING_FINAL_STATUS.txt  TECHNICAL_DOCUMENTATION_COMPLETE.md  TEKTON_PIPELINE_PARAMETERS_COMPLETE.md  WEBHOOK_RECEIVER_CONFIGURATION.md  guardrails.config.json  jest.config.js  jest.setup.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  repo-boundaries.toml  ruff.toml  supabase_connect.sh  tsconfig.json  (+1 more)
.cursor/: rules.md
.cursor/rules/: 00_AI_AGENT_QUICK_REFERENCE.mdc  00_FRAMEWORK_QUICK_REFERENCE.mdc  00_MANDATORY_ARCHITECTURE_COMPLIANCE.mdc  00_MASTER_RULE_HIERARCHY.mdc  01_SYSTEM_ARCHITECTURE_MAP.mdc  09_AI_ACCURACY_VERIFICATION_STANDARDS.mdc  11_KUBERNETES_DEPLOYMENT_MANDATORY.mdc  LOOPING_FIX_INSTRUCTIONS.md  README.md  cerebral-mobile.mdc  cursor_rules.mdc  documentation_date_enforcement.mdc  enterprise_methodology.mdc  error_accumulation_prevention.mdc  feature-flags-mobile.mdc  mandatory_hybrid_tenant_architecture.mdc  mobile-backend-integration.mdc  prevent_error_correlation.mdc  react-native-best-practices.mdc  react-native-web-quality.mdc  react-typescript-patterns.mdc  self_improve.mdc  typescript-strict-adherence.mdc  typescript_eslint_coordination.mdc
.cursor/rules/agentic/: development-assistant.mdc  rules-integration.mdc
.cursor/rules/ai-development/: 02_ENHANCED_AI_DEVELOPMENT_PATTERNS.mdc  current-2025-practices.mdc
.cursor/rules/bmad/: analyst.mdc  architect.mdc  bmad-master.mdc  bmad-orchestrator.mdc  dev.mdc  dispatcher.mdc  pm.mdc  po.mdc  qa.mdc  sm.mdc  ux-expert.mdc
.cursor/rules/core/: 00_MANDATORY_RAG_USAGE.mdc  01_PRODUCTION_STANDARDS.mdc  08_ENTERPRISE_COMPLIANCE_STANDARDS.mdc
.cursor/rules/deployment/: DEPLOYMENT_AUTOMATION_CLARITY.mdc
.cursor/rules/development/: 00_BROWNFIELD_FIRST_MANDATORY.mdc  00_DOCUMENTATION_ENFORCEMENT_STRICT.mdc  00_DOCUMENTATION_RULES_MEMORY_ALIGNMENT.mdc  00_HYBRID_MCP_LOCAL_PROTOCOLS.mdc  (+24 more)
.git-hooks/: validate-branch.sh  validate-changed-files.sh  validate-commit-message.sh
.github/: actionlint.yaml  pull_request_template.md
.github/workflows/: autodoc-ingest.yml  autodoc.yml  image-tag-enforcement.yml  k8s-validation.yml  lavamoat-scan.yml  native-build.yml  release.yml  repo-boundaries.yml  security-secret-scan.yml  tablet-build.yml  token-storage-scan.yml  wearable-build.yml
.husky/: pre-commit  pre-push
.trae/: CONSOLIDATION_SUMMARY.md
.trae/rules/: dev_workflow.md  enterprise_methodology.md  self_improve.md
YOLO_GUIDES/: BMAD_YOLO_MASTER_INDEX.md  BMAD_YOLO_STANDARD_TEMPLATE.md  COMPLETE_YOLO_65H_ALL_PHASES.md  HOW_TO_USE_BMAD_YOLO_TEMPLATE.md  HYBRID_YOLO_24H_COMPLETE_BLUEPRINT.md  HYBRID_YOLO_24H_FINAL_SUMMARY.md  README.md  YOLO_MODE_ENGINEERING_BLUEPRINT.md  YOLO_MODE_GO_DECISION.md
android/app/: build.gradle  proguard-rules-release.pro
apps/native/: Dockerfile  eslint.config.cjs  package.json  tsconfig.json
apps/tablet/: Dockerfile  eslint.config.cjs  package.json
apps/wearable/: Dockerfile  eslint.config.cjs  package.json
build-todo/: FEATURE_FLAG_MAPPING.md  PHASE_1_FEATURE_FLAGS.md  PHASE_3_INTEGRATION_TESTS.md  PHASE_3_MANUAL_TESTING.md  PHASE_3_SCREEN_AUDIT.md  PHASE_4_BUILD_AUTOMATION.md  TIER_MAPPING.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FEATURE_FLAGS.md  PERFORMANCE_TUNING.md  SECURITY_SECRET_SCAN_REPORT_2025_12_21.md  TIER_SYSTEM.md  TROUBLESHOOTING.md
docs/00-QUICK-START/: SETUP_COMPLETE.md  START_HERE.md  UNIVERSAL_TOKEN_ENGINE.md
docs/01-DEPLOYMENT/: TEKTON_PIPELINE_PARAMETERS_COMPLETE.md
docs/05-ARCHITECTURE/: ARCHITECTURE_MULTIARCH_FIX_OCTOBER_25.md  BASE_IMAGES_DOCUMENTATION.md  BASE_IMAGES_INDEX.md  BASE_IMAGE_BLOCKER_ACTION_PLAN.md  CHANGELOG.md  CI_CD_COMPLETE_GUIDE.md  CI_CD_FOR_AGENTS.md  CI_CD_MONITORING_GUIDE.md  CI_CD_README.md  CI_CD_RESTORATION_COMPLETE.md  CI_CD_TRAEFIK_CONFIGURATION.md  CODE_QUALITY_GUARDRAILS.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_COMPLETE.md  FIREWALL_TRAEFIK_MAPPING.md  GITHUB_WEBHOOK_ORG_SETUP.md  HANDOFF_TO_NEXT_AGENT.md  IMPLEMENTATION_CHECKLIST.md  MOBILE_IMPLEMENTATION_PLAN.md  NAMESPACE_CORRECTION_FINAL.md  README_DOCUMENTATION.md  README_IMPLEMENTATION.md  SUPABASE_CLI_README.md  SYSTEM_WIRING_COMPLETE_VERIFIED.md  TECHNICAL_DOCUMENTATION_COMPLETE.md  TLS_CERTIFICATE_CONFIGURATION.md  TRAEFIK_MIGRATION_COMPLETE_VERIFICATION.md  WEBHOOK_404_FIX_COMPLETE.md  WEBHOOK_NOT_CONFIGURED_CRITICAL.md  WEBHOOK_RECEIVER_CONFIGURATION.md  WEBHOOK_SECRET_CONFIGURATION.md  🚨_READ_THIS_FIRST_CI_CD_SYSTEM.md
docs/CI_CD/: MAC_STUDIO_RUNNERS.md
docs/guardrails/: PORTABLE_ENTERPRISE_GUARDRAILS.md
e2e/scenarios/: authentication.test.ts  data-sync.test.ts  user-registration.test.ts
frontend-react-native/: .dockerignore  App.tsx  Dockerfile.build  Dockerfile.frontend-only  FILE_STRUCTURE_GUIDELINES.md  index.web.js  jest.setup.js  nginx-react-native-web.conf  webpack.config.js
frontend-react-native/.husky/: pre-commit  pre-push
frontend-react-native/android/: settings.gradle
frontend-react-native/ios/: Podfile
frontend-react-native/web/: index.html
git-hooks/: enhanced-pre-commit
k8s/: README.md
scripts/: bump-version.sh  create-android-secret.sh  create-ios-secret.sh  create-macstudio-ssh-secret.sh  enforce_logging_metrics.py  policy-check.mjs  secret_scan_redacted.py  setup-git-hooks.sh  test-tier-guards.sh  test-webhook-e2e.sh  token_storage_scan.py  validate-docs-placement.py  validate_repo_boundaries_ci.py
scripts/ci/: check-no-vault-docs.sh
scripts/validation/: ensure_migrations_applied.sh
tools/guardrails/: check-diff.mjs  check-module.mjs  check-staged.mjs  config.mjs  shared.mjs
(+118 files in other folders)
