[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebral-platform"
version = "0.1.0"
description = "Enterprise AI-Powered Knowledge Management Platform"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Cerebral Platform Team", email = "engineering@cerebralplatform.com"}
]

# Core dependencies needed by BOTH server platform AND cflow
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.10.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.2.0",
    "rich>=14.0.0",
    "asyncio>=3.4.0",
    "aiohttp>=3.12.0",
    "certifi>=2025.6.0",
    "idna>=3.10",
    "anyio>=4.9.0",
    "numpy>=2.1.3",
    "redis>=5.2.1",
    "pyotp>=2.9.0",
    "supabase>=2.9.1",
    "cryptography>=45.0.5",
    "asyncpg>=0.30.0",
    "chromadb>=0.5.23",
    "sentence-transformers>=3.3.1",
    "mcp>=1.10.1",
    "jsonschema>=4.0,<5.0",
    "openai==1.93.3",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.2",
    "GitPython>=3.1.0",
    "watchdog>=3.0.0",
    "websockets>=15.0.1",
    "asyncio-mqtt>=0.16.2",
    "python-daemon>=3.1.2",
    "psutil>=7.0.0",
    "torch>=2.5.1",
    "torchvision>=0.19.1",
    "nltk>=3.9.1",
    "transformers>=4.48.0",
    "boto3>=1.39.14",
    "sqlalchemy==2.0.40",
    "email-validator>=2.2.0",
    "tensorflow>=2.14.0",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.1",
    "robinzhon>=0.1.0",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.0",
    "schedule>=1.2.2",
    "aioredis>=2.0.1",
    "lz4>=4.4.4",
    "cachetools>=5.5.2",
    "orjson>=3.11.0",
    "prometheus-client>=0.22.1",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "uvloop>=0.21.0",
    "whoosh>=2.7.4",
    "elasticsearch>=9.1.0",
    "mmh3>=5.1.0",
    "scipy>=1.16.0",
    "radon>=6.0.1",
    "circuitbreaker>=1.4.1",
    "libcst>=1.8.2",
    "bowler>=0.9.0",
    "neo4j>=5.28.2",
    "cflow-platform==0.1.5",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "torchaudio>=2.7.1",
    "flask>=3.1.2",
    "bandit>=1.8.6",
    "safety>=3.6.2",
    "semgrep>=1.79.0",
    "pylint>=4.0.2",
]

[project.optional-dependencies]
# Lightweight cflow installer dependencies only
cflow = [
    "requests>=2.32.3",
    "toml>=0.10.0",
    "jinja2>=3.1.0",
    "pathlib>=1.0.0",
    "filelock>=3.18.0",
]

# Server platform enterprise dependencies
server = [
    "supabase>=2.16.0",
    "postgrest>=1.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.40",
    "alembic>=1.16.0",
    "redis>=6.2.0",
    "aioredis>=2.0.0",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.0",
    "pyjwt>=2.10.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "passlib>=1.7.4",
    "gunicorn>=21.2.0",
    "supervisor>=4.2.0",
]

# AI and ML dependencies for server platform
ai-ml = [
    "openai>=1.93.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.53.0",
    "torch>=2.5.1",
    "numpy>=2.2.0",
    "scipy>=1.16.0",
    "scikit-learn>=1.7.0",
    "faiss-cpu>=1.7.4",
    "huggingface-hub>=0.15.0,<1.0",
    "tokenizers>=0.21.0",
    "safetensors>=0.5.0",
    "nltk>=3.9.0",
]

# Enterprise monitoring and observability
monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "structlog>=23.2.0",
    "limits>=5.4.0",
    "slowapi>=0.1.9",
]

# Document processing and automation
automation = [
    "playwright>=1.53.0",
    "selenium>=4.34.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=6.0.0",
    "pymupdf>=1.26.0",
    "opencv-python>=4.12.0",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
    "undetected-chromedriver>=3.5.0",
    "fake-useragent>=2.2.0",
    "playwright-stealth>=2.0.0",
]

# Development and testing dependencies
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "flake8>=7.3.0",
    "autopep8>=2.3.0",
    "build>=1.2.0",
]

# Complete server platform (all enterprise features)
full-server = [
    "cerebral-platform[server,ai-ml,monitoring,automation]"
]

# Complete development environment
full-dev = [
    "cerebral-platform[full-server,dev]"
]

[project.scripts]
cerebral = "cerebral_cli.main:cli"
cb = "cerebral_cli.main:cli"

# Separate build targets for different distributions
[tool.hatch.build.targets.wheel]
# Default wheel includes core platform
include = [
    "backend-python/api/",
    "backend-python/core/",
    "backend-python/models/",
    "backend-python/services/",
    "backend-python/shared/",
    "backend-python/routes/",
    "backend-python/utilities/",
    "backend-python/schemas/",
    "backend-python/config/",
    "backend-python/tools/",
    "backend-python/tests/",
]
exclude = [
    "automotive/",
    "data/",
    "intelligence_data/",
    "legacy_cleanup/",
    "analysis_results/",
    "supabase_internals/",
    "**/__pycache__/",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"pyproject.toml" = "pyproject.toml"

[tool.hatch.build.targets.sdist]
include = [
    "backend-python/api/",
    "backend-python/core/",
    "backend-python/models/",
    "backend-python/services/",
    "backend-python/shared/",
    "backend-python/routes/",
    "backend-python/utilities/",
    "backend-python/schemas/",
    "src/cli/",              # Frontend CLI components
    "pyproject.toml",
]

exclude = [
    "tests/",
    "automotive/",    # Server-only features
    "data/",
    "intelligence_data/",
    "legacy_cleanup/",
    "**/__pycache__/",
    "**/*.pyc",
    "**/.pytest_cache/",
]

[tool.hatch.metadata]
allow-direct-references = true

# Environment configuration for different use cases
[tool.hatch.envs.default]
dependencies = [
    "cerebral-platform[dev]"
]

[tool.hatch.envs.cflow]
# Lightweight environment for cflow development
dependencies = [
    "cerebral-platform[cflow,dev]"
]

[tool.hatch.envs.server]
# Full server development environment
dependencies = [
    "cerebral-platform[full-dev]"
]

[tool.hatch.envs.production]
# Production server environment (no dev dependencies)
dependencies = [
    "cerebral-platform[full-server]"
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "isort>=6.0.0",
    "mypy>=1.16.0",
    "ruff>=0.8.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "bandit>=1.8.6",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["automotive/", "legacy_cleanup/"]

[tool.black]
target-version = ["py311"]
line-length = 88
extend-exclude = '''
/(
    automotive
    | legacy_cleanup
    | data
    | intelligence_data
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["api", "backend_python", "core", "services", "shared"]
order-by-type = false

[tool.isort]
profile = "black"
line_length = 88
skip = ["automotive", "legacy_cleanup", "data", "intelligence_data"]
known_first_party = ["api", "backend_python", "core", "services", "shared"]
order_by_type = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    "automotive/",
    "legacy_cleanup/",
    "data/",
    "intelligence_data/"
]

[tool.pytest.ini_options]
markers = [
    "security: security testing (static analysis, input validation, auth/authz, penetration)",
    "penetration: penetration and resilience testing",
    "input_validation: input validation security testing",
    "asyncio: async test support",
]
asyncio_mode = "auto"
